<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">What I\'ve Learned</string>
    <string name="main_page_title">What I\'ve Learned?\n(JuaraAndroid Edition)</string>
    <string name="main_page_btn_unit_one">Unit 1: Kotlin Basics</string>
    <string name="main_page_btn_unit_two">Unit 2: Layouts</string>
    <string name="main_page_btn_unit_three">Unit 3: Navigation</string>
    <string name="main_page_btn_unit_four">Unit 4: Connect to the Internet</string>
    <string name="main_page_btn_unit_five">Unit 5: Data persistence</string>
    <string name="main_page_btn_unit_six">Unit 6: WorkManager</string>
    <string name="main_page_fab_change_locale">Change Locale to Indonesia</string>
    <!-- Unit 1-->
    <string name="unit_1_text_title">Unit 1: Kotlin basics</string>
    <string name="unit_1_text_pathways">Consist of 4 Pathways</string>
    <string name="unit_1_text_pathways_1">1. Introduction to Kotlin</string>
    <string name="unit_1_text_pathways_2">2. Create your first app</string>
    <string name="unit_1_text_pathways_3">3. Build a basic layout</string>
    <string name="unit_1_text_pathways_4">4. Add a button to an app</string>
    <string name="unit_1_text_apps">Apps created in this unit</string>
    <string name="unit_1_text_apps_1">- Apps: Dice Roller</string>
    <string name="unit_1_text_apps_2">- Project: Lemonade App</string>
    <string name="unit_1_button_apps_1">Demo</string>
    <!--Unit 2 -->
    <string name="unit_2_text_title">Unit 2: Layouts</string>
    <string name="unit_2_text_pathways">Consist of 3 Pathways</string>
    <string name="unit_2_text_pathways_1">1. Get user input in app: Part 1</string>
    <string name="unit_2_text_pathways_2">2. Get user input in app: Part 2</string>
    <string name="unit_2_text_pathways_3">3. Display a Scrollable List</string>
    <string name="unit_2_text_apps">Apps created in this unit</string>
    <string name="unit_2_text_apps_1">- Apps: Tip Time</string>
    <string name="unit_2_text_apps_2">- Project: Dogglers Apps</string>
    <string name="unit_2_button_apps_1">Demo</string>
    <!-- Unit 3 -->
    <string name="unit_3_text_title">Unit 3: Navigation</string>
    <string name="unit_3_text_pathways">Consist of 4 Pathways</string>
    <string name="unit_3_text_pathways_1">1. Navigate between screens</string>
    <string name="unit_3_text_pathways_2">2. Introduction to the Navigation Component</string>
    <string name="unit_3_text_pathways_3">3. Architecture components</string>
    <string name="unit_3_text_pathways_4">4. Advanced navigation app examples</string>
    <string name="unit_3_text_apps">Apps created in this unit</string>
    <string name="unit_3_text_apps_1">- Apps: Words</string>
    <string name="unit_3_text_apps_2">- Apps: DessertClicker</string>
    <string name="unit_3_text_apps_3">- Project: Lunch Tray App</string>
    <string name="unit_3_text_apps_4">- Apps: Unscramble</string>
    <string name="unit_3_text_apps_5">- Apps: Cupcake</string>
    <string name="unit_3_button_apps_1">Demo</string>
    <!-- Unit 4 -->
    <string name="unit_4_text_title">Unit 4: Connect to the internet</string>
    <string name="unit_4_text_pathways">Consist of 2 Pathways</string>
    <string name="unit_4_text_pathways_1">1. Coroutines</string>
    <string name="unit_4_text_pathways_2">2. Get data from the internet</string>
    <string name="unit_4_text_apps">Apps created in this unit</string>
    <string name="unit_4_text_apps_1">- Project: Amphibians App</string>
    <string name="unit_4_button_apps_1">Demo</string>
    <!-- Unit 5 -->
    <string name="unit_5_text_title">Unit 5: Data persistence</string>
    <string name="unit_5_text_pathways">Consist of 2 Pathways</string>
    <string name="unit_5_text_pathways_1">1. Introduction to SQL, Room, and Flow</string>
    <string name="unit_5_text_pathways_2">2. Use Room for data persistence</string>
    <string name="unit_5_text_apps">Apps created in this unit</string>
    <string name="unit_5_text_apps_1">- Project: Forage App</string>
    <string name="unit_5_button_apps_1">Demo</string>
    <!-- Unit 6 -->
    <string name="unit_6_text_title">Unit 6: WorkManager</string>
    <string name="unit_6_text_pathways">Consist of 1 Pathway</string>
    <string name="unit_6_text_pathways_1">1. Schedule tasks with WorkManager</string>
    <string name="unit_6_text_apps">Apps created in this unit</string>
    <string name="unit_6_text_apps_1">- Project: Water Me! App</string>
    <string name="unit_6_button_apps_1">Demo</string>
    <!-- Project: Lemonade -->
    <string name="app_name_lemonade" translatable="false">Lemonade</string>
    <string name="lemon_select" translatable="false">Click to select a lemon!</string>
    <string name="lemon_squeeze" translatable="false">Click to juice the lemon!</string>
    <string name="lemon_drink" translatable="false">Click to drink your lemonade!</string>
    <string name="lemon_empty_glass" translatable="false">Click to start again!</string>
    <string name="squeeze_count" translatable="false">Squeeze count: %1$d, keep squeezing!</string>
    <!-- Project: Dogglers -->
    <string name="app_name_dogglers" translatable="false">Dogglers</string>
    <string name="dog_name" translatable="false">%1$s</string>
    <string name="dog_age" translatable="false">Age: %1$s</string>
    <string name="dog_hobbies" translatable="false">Hobbies: %1$s</string>
    <string name="vertical" translatable="false">Vertical</string>
    <string name="horizontal" translatable="false">Horizontal</string>
    <string name="grid" translatable="false">Grid</string>
    <!-- Project: Lunch Tray -->
    <string name="app_name_lunch_tray" translatable="false">Lunch Tray</string>
    <string name="title_start_order" translatable="false">Order</string>
    <string name="title_coupons" translatable="false">Coupons</string>
    <string name="title_entree_menu" translatable="false">Entrees</string>
    <string name="title_side_menu" translatable="false">Sides</string>
    <string name="title_accompaniment_menu" translatable="false">Accompaniments</string>
    <string name="title_checkout" translatable="false">Checkout</string>
    <string name="start_order" translatable="false">Start Order</string>
    <string name="subtotal" translatable="false">Subtotal: %s</string>
    <string name="tax" translatable="false">Tax: %s</string>
    <string name="total" translatable="false">Total: %s</string>
    <string name="next" translatable="false">Next</string>
    <string name="order_summary" translatable="false">Order Summary</string>
    <string name="submit" translatable="false">Submit Order</string>
    <string name="submit_order" translatable="false">Order Submitted!</string>
    <!-- Not yet implemented -->
    <string name="not_yet_implemented">Sorry, this page is not implemented yet, please wait for the future release 😉</string>
</resources>